added new feature

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <h1>this is my website</h1>
 <p>go to my website i an sure u love it</p>
 <p>welcome to my website<p>
+<p>its beautiful</p>
 </html>
