--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <title> arijit </title>
 <h1>this is my website</h1>
 <p>go to my website i an sure u love it</p>
-<p>welcome to my website<p>
+<p>Hi, welcome to my website<p>
 <p>its beautiful</p>
 </html>
