--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 <p>go to my website i an sure u love it</p>
 <p>Hi, welcome to my website<p>
 <p>its beautiful</p>
+<p>nice for greeting</p>
 </html>
